# vecnoscan-indexer

./: .env.example  .gitignore  BalanceProcessor.py  BlocksProcessor.py  Cargo.toml  Pipfile  README.md  TxAddrMappingUpdater.py  VirtualChainProcessor.py  build_run.sh  dbsession.py  docker-compose-example.yaml  main.py
cli/: Cargo.toml
cli/src/: cli_args.rs
database/: Cargo.toml
database/migrations/schema/: down.sql  up.sql
database/src/: client.rs
database/src/models/: balance.rs  mod.rs
database/src/models/types/: hash.rs
database/src/query/: insert.rs
docker/: Dockerfile  build.sh  docker-compose-local-node.yaml  docker-compose.yaml
indexer/: Cargo.toml
indexer/src/: main.rs  settings.rs  vars.rs
indexer/src/blocks/: fetch_blocks.rs  process_blocks.rs
indexer/src/signal/: signal_handler.rs
indexer/src/transactions/: process_transactions.rs
indexer/src/virtual_chain/: process_virtual_chain.rs  update_transactions.rs
mapping/: Cargo.toml
mapping/src/: blocks.rs  mapper.rs  transactions.rs
vecnod/: Cargo.toml  VecnodClient.py  VecnodMultiClient.py  VecnodThread.py  messages_pb2.py  rpc_pb2.py
vecnod/protos/: rpc.proto
vecnod/src/pool/: manager.rs
